# EveCompanion

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Qml/: CMakeLists.txt
Qml/CastomButtons/: ButtonPageEvent.qml  CMakeLists.txt
Qml/Pages/: AuthPage.qml  CMakeLists.txt  MainPage.qml  SecondPage.qml
Qml/Pages/MainPage/: CMakeLists.txt  DrawerMainPage.qml  DrawerModel.qml  MainPage.qml
Qml/StyleSettings/: CMakeLists.txt  Style.qml
src/: CMakeLists.txt
src/Aplication/: Aplication.cpp  Aplication.h  CMakeLists.txt
src/RefreshingTokens/: CMakeLists.txt
src/RefreshingTokens/include/: Refresh_Manager.h
src/RefreshingTokens/src/: Refresh_Manager.cpp
src/RestRequestManager/: CMakeLists.txt
src/RestRequestManager/include/: RefreshTokenSeveralPostRequest.h  RestRequestManager.h  RestRequestManagerWithAuth.h  RestRequestManagerWithoutAuth.h
src/RestRequestManager/src/: RefreshTokenSeveralPostRequest.cpp  RestRequestManager.cpp  RestRequestManagerWithAuth.cpp  RestRequestManagerWithoutAuth.cpp
src/authorization/: CMakeLists.txt
src/authorization/include/: AuthUserDataManager.h  Auth_user_data.h  AuthorizationUrl.h  Authorization_engine.h  CastomNetworkAccessManager.h  DataStorage.h  TcpServer.h  User_data_handler.h  Validating_JWT.h
src/authorization/src/: AuthUserDataManager.cpp  Auth_user_data.cpp  AuthorizationUrl.cpp  Authorization_engine.cpp  CastomNetworkAccessManager.cpp  DataStorage.cpp  TcpServer.cpp  Tcp_server.cpp  User_data_handler.cpp  Validating_JWT.cpp  main.cpp
src/cppModels/: CMakeLists.txt
src/logging/: CMakeLists.txt
(+4 files in other folders)
